templates/tenants/capitos/ingress-service-manifest/ingressdomain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app1-app2-app3
  namespace: usermanagement
spec:
  ingressClassName: nginx
  rules:
  - host: nexgbitsapp.nexgbits.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80
  - host: nexgbitsapp.nexgbits.com
    http:
      paths:
      - path: /web1
        pathType: Prefix
        backend:
          service:
            name: app2-nginx-clusterip-service
            port:
              number: 8000
  - host: nexgbitsapp.nexgbits.com
    http:
      paths:
      - path: /web2
        pathType: Prefix
        backend:
          service:
            name: usermgmt-webapp-clusterip-service
            port:
              number: 8080
